test/resolver/fail/resolve_import_not_exported.ms
import { bar } from "module_lib";
val x := bar;
